Fc/Grammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ./Fc/Grammar.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parsefc -> All                              (0)
	All -> All Funcion                                 (1)
	All -> Funcion                                     (2)
	All -> All Struct                                  (3)
	All -> Struct                                      (4)
	All -> All Union                                   (5)
	All -> Union                                       (6)
	All -> All VarDeclaration                          (7)
	All -> VarDeclaration                              (8)
	VarDeclarations -> VarDeclarations VarDeclaration   (9)
	VarDeclarations -> VarDeclaration                  (10)
	ManyTypes -> ManyTypes ',' Types                   (11)
	ManyTypes -> Types                                 (12)
	asteriscos -> asteriscos '*'                       (13)
	asteriscos -> '*'                                  (14)
	basicType -> type                                  (15)
	Types -> basicType                                 (16)
	Types -> unsigned basicType                        (17)
	Types -> struct var                                (18)
	Types -> union var                                 (19)
	Types -> functionType '(' Types ')' '(' ManyTypes ')'   (20)
	Types -> functionType '(' Types ')' '(' ')'        (21)
	Types -> '(' Types asteriscos ')'                  (22)
	arrays -> arrays '[' int ']'                       (23)
	arrays -> '[' int ']'                              (24)
	variables -> variables ',' var                     (25)
	variables -> variables ',' var arrays              (26)
	variables -> variables ',' asteriscos var          (27)
	variables -> Types var                             (28)
	variables -> Types asteriscos var                  (29)
	variables -> Types var arrays                      (30)
	VarDeclaration -> variables ';'                    (31)
	StructVar -> var                                   (32)
	Struct -> struct StructVar Block2 VarDeclarations Block3 ';'   (33)
	UnionVar -> var                                    (34)
	Union -> union UnionVar Block2 VarDeclarations Block3 ';'   (35)
	Funcion -> FuncionConArgs Block FuncionP3          (36)
	Funcion -> FuncionNoArgs Block                     (37)
	FuncionNoArgs -> Types var '(' ')'                 (38)
	FuncionConArgs -> Types var FuncionP2 Parametros ')'   (39)
	FuncionP2 -> '('                                   (40)
	FuncionP3 ->                                       (41)
	Block -> Block2 Instrucciones Block3               (42)
	Block2 -> '{'                                      (43)
	Block3 -> '}'                                      (44)
	Instruccion -> Block                               (45)
	Instruccion -> For                                 (46)
	Instruccion -> While                               (47)
	Instruccion -> If                                  (48)
	Instruccion -> Asignacion ';'                      (49)
	Instruccion -> Exp ';'                             (50)
	Instruccion -> break ';'                           (51)
	Instruccion -> continue ';'                        (52)
	Instruccion -> return ';'                          (53)
	Instruccion -> return Exp ';'                      (54)
	Instruccion -> read var ';'                        (55)
	Instruccion -> write Exp ';'                       (56)
	Instruccion -> ';'                                 (57)
	For -> for '(' Instruccion BoolE2 Instruccion ')' Instruccion   (58)
	While -> while BoolE Instruccion                   (59)
	If -> if BoolE Block                               (60)
	If -> if BoolE Block else Block                    (61)
	BoolE2 -> ';' Exp ';'                              (62)
	BoolE -> '(' Exp ')'                               (63)
	Asignacion -> Atom2 '=' Exp                        (64)
	LLamada -> var '(' ParametrosIn ')'                (65)
	LLamada -> var '(' ')'                             (66)
	ParametrosIn -> ParametrosIn ',' Exp               (67)
	ParametrosIn -> Exp                                (68)
	Instrucciones -> Instrucciones Instruccion         (69)
	Instrucciones -> Instruccion                       (70)
	Instrucciones -> Instrucciones VarDeclaration      (71)
	Instrucciones -> VarDeclaration                    (72)
	Parametro -> ref Types var                         (73)
	Parametro -> Types var                             (74)
	Parametros -> Parametros ',' Parametro             (75)
	Parametros -> Parametro                            (76)
	AnomFun -> '(' Types ')' '(' Parametros ')' '{' Instrucciones '}'   (77)
	AnomFun -> '(' Types ')' '(' ')' '{' Instrucciones '}'   (78)
	arr -> arr '[' Exp ']'                             (79)
	arr ->                                             (80)
	Atom -> LLamada                                    (81)
	Atom -> int                                        (82)
	Atom -> float                                      (83)
	Atom -> bool                                       (84)
	Atom -> str                                        (85)
	Atom -> AnomFun                                    (86)
	Atom2 -> var arr                                   (87)
	Atom2 -> Exp '.' var                               (88)
	Atom2 -> '*' Exp                                   (89)
	Exp -> Exp '+' Exp                                 (90)
	Exp -> Exp '-' Exp                                 (91)
	Exp -> Exp '*' Exp                                 (92)
	Exp -> Exp '/' Exp                                 (93)
	Exp -> Exp '<<' Exp                                (94)
	Exp -> Exp '>>' Exp                                (95)
	Exp -> Exp '<' Exp                                 (96)
	Exp -> Exp '<=' Exp                                (97)
	Exp -> Exp '>' Exp                                 (98)
	Exp -> Exp '>=' Exp                                (99)
	Exp -> Exp '==' Exp                                (100)
	Exp -> Exp '!=' Exp                                (101)
	Exp -> Exp '&' Exp                                 (102)
	Exp -> Exp '%' Exp                                 (103)
	Exp -> Exp '|' Exp                                 (104)
	Exp -> Exp '&&' Exp                                (105)
	Exp -> Exp '||' Exp                                (106)
	Exp -> '(' Exp ')'                                 (107)
	Exp -> '-' Exp                                     (108)
	Exp -> Atom2                                       (109)
	Exp -> Atom                                        (110)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	var            { Var $$ }
	int            { Int $$ }
	float          { Float $$ }
	type           { Type $$ }
	functionType   { Function $$ }
	bool           { Bool $$ }
	ref            { Ref $$ }
	if             { If $$ }
	while          { While $$ }
	for            { For $$ }
	else           { Else $$ }
	union          { Union $$ }
	struct         { Struct $$ }
	unsigned       { Unsigned $$ }
	continue       { Continue $$ }
	break          { Break $$ }
	return         { Return $$ }
	read           { Read $$ }
	write          { Write $$ }
	str            { Str $$ }
	'<<'           { ShiftL $$ }
	'>>'           { ShiftR $$ }
	'.'            { Punto $$ }
	'=='           { Igual $$ }
	'>='           { MayorIgual $$ }
	'<='           { MenorIgual $$ }
	'!='           { Diferente $$ }
	'||'           { BoolOr $$ }
	'&&'           { BoolAnd $$ }
	'='            { Asignacion $$ }
	'+'            { Mas $$ }
	'-'            { Menos $$ }
	'*'            { Por $$ }
	'/'            { Entre $$ }
	'('            { OpenParen $$ }
	')'            { CloseParen $$ }
	'{'            { OpenCurly $$ }
	'}'            { CloseCurly $$ }
	';'            { PuntoComa $$ }
	'%'            { Modulo $$ }
	'<'            { Menor $$ }
	'>'            { Mayor $$ }
	'&'            { BitAnd $$ }
	'|'            { BitOr $$ }
	'['            { OpenBrackets $$ }
	']'            { CloseBrackets $$ }
	','            { Coma $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parsefc  rule  0
	All             rules 1, 2, 3, 4, 5, 6, 7, 8
	VarDeclarations rules 9, 10
	ManyTypes       rules 11, 12
	asteriscos      rules 13, 14
	basicType       rule  15
	Types           rules 16, 17, 18, 19, 20, 21, 22
	arrays          rules 23, 24
	variables       rules 25, 26, 27, 28, 29, 30
	VarDeclaration  rule  31
	StructVar       rule  32
	Struct          rule  33
	UnionVar        rule  34
	Union           rule  35
	Funcion         rules 36, 37
	FuncionNoArgs   rule  38
	FuncionConArgs  rule  39
	FuncionP2       rule  40
	FuncionP3       rule  41
	Block           rule  42
	Block2          rule  43
	Block3          rule  44
	Instruccion     rules 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57
	For             rule  58
	While           rule  59
	If              rules 60, 61
	BoolE2          rule  62
	BoolE           rule  63
	Asignacion      rule  64
	LLamada         rules 65, 66
	ParametrosIn    rules 67, 68
	Instrucciones   rules 69, 70, 71, 72
	Parametro       rules 73, 74
	Parametros      rules 75, 76
	AnomFun         rules 77, 78
	arr             rules 79, 80
	Atom            rules 81, 82, 83, 84, 85, 86
	Atom2           rules 87, 88, 89
	Exp             rules 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	type           shift, and enter state 12
	functionType   shift, and enter state 13
	union          shift, and enter state 14
	struct         shift, and enter state 15
	unsigned       shift, and enter state 16
	'('            shift, and enter state 17

	All            goto state 18
	basicType      goto state 3
	Types          goto state 4
	variables      goto state 5
	VarDeclaration goto state 6
	Struct         goto state 7
	Union          goto state 8
	Funcion        goto state 9
	FuncionNoArgs  goto state 10
	FuncionConArgs goto state 11

State 1


	type           shift, and enter state 12
	functionType   shift, and enter state 13
	union          shift, and enter state 14
	struct         shift, and enter state 15
	unsigned       shift, and enter state 16
	'('            shift, and enter state 17

	All            goto state 2
	basicType      goto state 3
	Types          goto state 4
	variables      goto state 5
	VarDeclaration goto state 6
	Struct         goto state 7
	Union          goto state 8
	Funcion        goto state 9
	FuncionNoArgs  goto state 10
	FuncionConArgs goto state 11

State 2

	All -> All . Funcion                                (rule 1)
	All -> All . Struct                                 (rule 3)
	All -> All . Union                                  (rule 5)
	All -> All . VarDeclaration                         (rule 7)

	type           shift, and enter state 12
	functionType   shift, and enter state 13
	union          shift, and enter state 14
	struct         shift, and enter state 15
	unsigned       shift, and enter state 16
	'('            shift, and enter state 17

	basicType      goto state 3
	Types          goto state 4
	variables      goto state 5
	VarDeclaration goto state 19
	Struct         goto state 20
	Union          goto state 21
	Funcion        goto state 22
	FuncionNoArgs  goto state 10
	FuncionConArgs goto state 11

State 3

	Types -> basicType .                                (rule 16)

	var            reduce using rule 16
	'*'            reduce using rule 16
	')'            reduce using rule 16
	','            reduce using rule 16


State 4

	variables -> Types . var                            (rule 28)
	variables -> Types . asteriscos var                 (rule 29)
	variables -> Types . var arrays                     (rule 30)
	FuncionNoArgs -> Types . var '(' ')'                (rule 38)
	FuncionConArgs -> Types . var FuncionP2 Parametros ')'    (rule 39)

	var            shift, and enter state 39
	'*'            shift, and enter state 40

	asteriscos     goto state 38

State 5

	variables -> variables . ',' var                    (rule 25)
	variables -> variables . ',' var arrays             (rule 26)
	variables -> variables . ',' asteriscos var         (rule 27)
	VarDeclaration -> variables . ';'                   (rule 31)

	';'            shift, and enter state 36
	','            shift, and enter state 37


State 6

	All -> VarDeclaration .                             (rule 8)

	type           reduce using rule 8
	functionType   reduce using rule 8
	union          reduce using rule 8
	struct         reduce using rule 8
	unsigned       reduce using rule 8
	'('            reduce using rule 8
	%eof           reduce using rule 8


State 7

	All -> Struct .                                     (rule 4)

	type           reduce using rule 4
	functionType   reduce using rule 4
	union          reduce using rule 4
	struct         reduce using rule 4
	unsigned       reduce using rule 4
	'('            reduce using rule 4
	%eof           reduce using rule 4


State 8

	All -> Union .                                      (rule 6)

	type           reduce using rule 6
	functionType   reduce using rule 6
	union          reduce using rule 6
	struct         reduce using rule 6
	unsigned       reduce using rule 6
	'('            reduce using rule 6
	%eof           reduce using rule 6


State 9

	All -> Funcion .                                    (rule 2)

	type           reduce using rule 2
	functionType   reduce using rule 2
	union          reduce using rule 2
	struct         reduce using rule 2
	unsigned       reduce using rule 2
	'('            reduce using rule 2
	%eof           reduce using rule 2


State 10

	Funcion -> FuncionNoArgs . Block                    (rule 37)

	'{'            shift, and enter state 34

	Block          goto state 35
	Block2         goto state 33

State 11

	Funcion -> FuncionConArgs . Block FuncionP3         (rule 36)

	'{'            shift, and enter state 34

	Block          goto state 32
	Block2         goto state 33

State 12

	basicType -> type .                                 (rule 15)

	var            reduce using rule 15
	'*'            reduce using rule 15
	')'            reduce using rule 15
	','            reduce using rule 15


State 13

	Types -> functionType . '(' Types ')' '(' ManyTypes ')'    (rule 20)
	Types -> functionType . '(' Types ')' '(' ')'       (rule 21)

	'('            shift, and enter state 31


State 14

	Types -> union . var                                (rule 19)
	Union -> union . UnionVar Block2 VarDeclarations Block3 ';'    (rule 35)

	var            shift, and enter state 30

	UnionVar       goto state 29

State 15

	Types -> struct . var                               (rule 18)
	Struct -> struct . StructVar Block2 VarDeclarations Block3 ';'    (rule 33)

	var            shift, and enter state 28

	StructVar      goto state 27

State 16

	Types -> unsigned . basicType                       (rule 17)

	type           shift, and enter state 12

	basicType      goto state 26

State 17

	Types -> '(' . Types asteriscos ')'                 (rule 22)

	type           shift, and enter state 12
	functionType   shift, and enter state 13
	union          shift, and enter state 24
	struct         shift, and enter state 25
	unsigned       shift, and enter state 16
	'('            shift, and enter state 17

	basicType      goto state 3
	Types          goto state 23

State 18

	%start_parsefc -> All .                             (rule 0)
	All -> All . Funcion                                (rule 1)
	All -> All . Struct                                 (rule 3)
	All -> All . Union                                  (rule 5)
	All -> All . VarDeclaration                         (rule 7)

	type           shift, and enter state 12
	functionType   shift, and enter state 13
	union          shift, and enter state 14
	struct         shift, and enter state 15
	unsigned       shift, and enter state 16
	'('            shift, and enter state 17
	%eof           accept

	basicType      goto state 3
	Types          goto state 4
	variables      goto state 5
	VarDeclaration goto state 19
	Struct         goto state 20
	Union          goto state 21
	Funcion        goto state 22
	FuncionNoArgs  goto state 10
	FuncionConArgs goto state 11

State 19

	All -> All VarDeclaration .                         (rule 7)

	type           reduce using rule 7
	functionType   reduce using rule 7
	union          reduce using rule 7
	struct         reduce using rule 7
	unsigned       reduce using rule 7
	'('            reduce using rule 7
	%eof           reduce using rule 7


State 20

	All -> All Struct .                                 (rule 3)

	type           reduce using rule 3
	functionType   reduce using rule 3
	union          reduce using rule 3
	struct         reduce using rule 3
	unsigned       reduce using rule 3
	'('            reduce using rule 3
	%eof           reduce using rule 3


State 21

	All -> All Union .                                  (rule 5)

	type           reduce using rule 5
	functionType   reduce using rule 5
	union          reduce using rule 5
	struct         reduce using rule 5
	unsigned       reduce using rule 5
	'('            reduce using rule 5
	%eof           reduce using rule 5


State 22

	All -> All Funcion .                                (rule 1)

	type           reduce using rule 1
	functionType   reduce using rule 1
	union          reduce using rule 1
	struct         reduce using rule 1
	unsigned       reduce using rule 1
	'('            reduce using rule 1
	%eof           reduce using rule 1


State 23

	Types -> '(' Types . asteriscos ')'                 (rule 22)

	'*'            shift, and enter state 40

	asteriscos     goto state 86

State 24

	Types -> union . var                                (rule 19)

	var            shift, and enter state 85


State 25

	Types -> struct . var                               (rule 18)

	var            shift, and enter state 84


State 26

	Types -> unsigned basicType .                       (rule 17)

	var            reduce using rule 17
	'*'            reduce using rule 17
	')'            reduce using rule 17
	','            reduce using rule 17


State 27

	Struct -> struct StructVar . Block2 VarDeclarations Block3 ';'    (rule 33)

	'{'            shift, and enter state 34

	Block2         goto state 83

State 28

	Types -> struct var .                               (rule 18)
	StructVar -> var .                                  (rule 32)

	var            reduce using rule 18
	'*'            reduce using rule 18
	'{'            reduce using rule 32


State 29

	Union -> union UnionVar . Block2 VarDeclarations Block3 ';'    (rule 35)

	'{'            shift, and enter state 34

	Block2         goto state 82

State 30

	Types -> union var .                                (rule 19)
	UnionVar -> var .                                   (rule 34)

	var            reduce using rule 19
	'*'            reduce using rule 19
	'{'            reduce using rule 34


State 31

	Types -> functionType '(' . Types ')' '(' ManyTypes ')'    (rule 20)
	Types -> functionType '(' . Types ')' '(' ')'       (rule 21)

	type           shift, and enter state 12
	functionType   shift, and enter state 13
	union          shift, and enter state 24
	struct         shift, and enter state 25
	unsigned       shift, and enter state 16
	'('            shift, and enter state 17

	basicType      goto state 3
	Types          goto state 81

State 32

	Funcion -> FuncionConArgs Block . FuncionP3         (rule 36)

	type           reduce using rule 41
	functionType   reduce using rule 41
	union          reduce using rule 41
	struct         reduce using rule 41
	unsigned       reduce using rule 41
	'('            reduce using rule 41
	%eof           reduce using rule 41

	FuncionP3      goto state 80

State 33

	Block -> Block2 . Instrucciones Block3              (rule 42)

	var            shift, and enter state 63
	int            shift, and enter state 64
	float          shift, and enter state 65
	type           shift, and enter state 12
	functionType   shift, and enter state 13
	bool           shift, and enter state 66
	if             shift, and enter state 67
	while          shift, and enter state 68
	for            shift, and enter state 69
	union          shift, and enter state 24
	struct         shift, and enter state 25
	unsigned       shift, and enter state 16
	continue       shift, and enter state 70
	break          shift, and enter state 71
	return         shift, and enter state 72
	read           shift, and enter state 73
	write          shift, and enter state 74
	str            shift, and enter state 75
	'-'            shift, and enter state 76
	'*'            shift, and enter state 77
	'('            shift, and enter state 78
	'{'            shift, and enter state 34
	';'            shift, and enter state 79

	basicType      goto state 3
	Types          goto state 49
	variables      goto state 5
	VarDeclaration goto state 50
	Block          goto state 51
	Block2         goto state 33
	Instruccion    goto state 52
	For            goto state 53
	While          goto state 54
	If             goto state 55
	Asignacion     goto state 56
	LLamada        goto state 57
	Instrucciones  goto state 58
	AnomFun        goto state 59
	Atom           goto state 60
	Atom2          goto state 61
	Exp            goto state 62

State 34

	Block2 -> '{' .                                     (rule 43)

	var            reduce using rule 43
	int            reduce using rule 43
	float          reduce using rule 43
	type           reduce using rule 43
	functionType   reduce using rule 43
	bool           reduce using rule 43
	if             reduce using rule 43
	while          reduce using rule 43
	for            reduce using rule 43
	union          reduce using rule 43
	struct         reduce using rule 43
	unsigned       reduce using rule 43
	continue       reduce using rule 43
	break          reduce using rule 43
	return         reduce using rule 43
	read           reduce using rule 43
	write          reduce using rule 43
	str            reduce using rule 43
	'-'            reduce using rule 43
	'*'            reduce using rule 43
	'('            reduce using rule 43
	'{'            reduce using rule 43
	';'            reduce using rule 43


State 35

	Funcion -> FuncionNoArgs Block .                    (rule 37)

	type           reduce using rule 37
	functionType   reduce using rule 37
	union          reduce using rule 37
	struct         reduce using rule 37
	unsigned       reduce using rule 37
	'('            reduce using rule 37
	%eof           reduce using rule 37


State 36

	VarDeclaration -> variables ';' .                   (rule 31)

	var            reduce using rule 31
	int            reduce using rule 31
	float          reduce using rule 31
	type           reduce using rule 31
	functionType   reduce using rule 31
	bool           reduce using rule 31
	if             reduce using rule 31
	while          reduce using rule 31
	for            reduce using rule 31
	union          reduce using rule 31
	struct         reduce using rule 31
	unsigned       reduce using rule 31
	continue       reduce using rule 31
	break          reduce using rule 31
	return         reduce using rule 31
	read           reduce using rule 31
	write          reduce using rule 31
	str            reduce using rule 31
	'-'            reduce using rule 31
	'*'            reduce using rule 31
	'('            reduce using rule 31
	'{'            reduce using rule 31
	'}'            reduce using rule 31
	';'            reduce using rule 31
	%eof           reduce using rule 31


State 37

	variables -> variables ',' . var                    (rule 25)
	variables -> variables ',' . var arrays             (rule 26)
	variables -> variables ',' . asteriscos var         (rule 27)

	var            shift, and enter state 48
	'*'            shift, and enter state 40

	asteriscos     goto state 47

State 38

	asteriscos -> asteriscos . '*'                      (rule 13)
	variables -> Types asteriscos . var                 (rule 29)

	var            shift, and enter state 45
	'*'            shift, and enter state 46


State 39

	variables -> Types var .                            (rule 28)
	variables -> Types var . arrays                     (rule 30)
	FuncionNoArgs -> Types var . '(' ')'                (rule 38)
	FuncionConArgs -> Types var . FuncionP2 Parametros ')'    (rule 39)

	'('            shift, and enter state 43
	';'            reduce using rule 28
	'['            shift, and enter state 44
	','            reduce using rule 28

	arrays         goto state 41
	FuncionP2      goto state 42

State 40

	asteriscos -> '*' .                                 (rule 14)

	var            reduce using rule 14
	'*'            reduce using rule 14
	')'            reduce using rule 14


State 41

	arrays -> arrays . '[' int ']'                      (rule 23)
	variables -> Types var arrays .                     (rule 30)

	';'            reduce using rule 30
	'['            shift, and enter state 144
	','            reduce using rule 30


State 42

	FuncionConArgs -> Types var FuncionP2 . Parametros ')'    (rule 39)

	type           shift, and enter state 12
	functionType   shift, and enter state 13
	ref            shift, and enter state 143
	union          shift, and enter state 24
	struct         shift, and enter state 25
	unsigned       shift, and enter state 16
	'('            shift, and enter state 17

	basicType      goto state 3
	Types          goto state 140
	Parametro      goto state 141
	Parametros     goto state 142

State 43

	FuncionNoArgs -> Types var '(' . ')'                (rule 38)
	FuncionP2 -> '(' .                                  (rule 40)

	type           reduce using rule 40
	functionType   reduce using rule 40
	ref            reduce using rule 40
	union          reduce using rule 40
	struct         reduce using rule 40
	unsigned       reduce using rule 40
	'('            reduce using rule 40
	')'            shift, and enter state 139


State 44

	arrays -> '[' . int ']'                             (rule 24)

	int            shift, and enter state 138


State 45

	variables -> Types asteriscos var .                 (rule 29)

	';'            reduce using rule 29
	','            reduce using rule 29


State 46

	asteriscos -> asteriscos '*' .                      (rule 13)

	var            reduce using rule 13
	'*'            reduce using rule 13
	')'            reduce using rule 13


State 47

	asteriscos -> asteriscos . '*'                      (rule 13)
	variables -> variables ',' asteriscos . var         (rule 27)

	var            shift, and enter state 137
	'*'            shift, and enter state 46


State 48

	variables -> variables ',' var .                    (rule 25)
	variables -> variables ',' var . arrays             (rule 26)

	';'            reduce using rule 25
	'['            shift, and enter state 44
	','            reduce using rule 25

	arrays         goto state 136

State 49

	variables -> Types . var                            (rule 28)
	variables -> Types . asteriscos var                 (rule 29)
	variables -> Types . var arrays                     (rule 30)

	var            shift, and enter state 135
	'*'            shift, and enter state 40

	asteriscos     goto state 38

State 50

	Instrucciones -> VarDeclaration .                   (rule 72)

	var            reduce using rule 72
	int            reduce using rule 72
	float          reduce using rule 72
	type           reduce using rule 72
	functionType   reduce using rule 72
	bool           reduce using rule 72
	if             reduce using rule 72
	while          reduce using rule 72
	for            reduce using rule 72
	union          reduce using rule 72
	struct         reduce using rule 72
	unsigned       reduce using rule 72
	continue       reduce using rule 72
	break          reduce using rule 72
	return         reduce using rule 72
	read           reduce using rule 72
	write          reduce using rule 72
	str            reduce using rule 72
	'-'            reduce using rule 72
	'*'            reduce using rule 72
	'('            reduce using rule 72
	'{'            reduce using rule 72
	'}'            reduce using rule 72
	';'            reduce using rule 72


State 51

	Instruccion -> Block .                              (rule 45)

	var            reduce using rule 45
	int            reduce using rule 45
	float          reduce using rule 45
	type           reduce using rule 45
	functionType   reduce using rule 45
	bool           reduce using rule 45
	if             reduce using rule 45
	while          reduce using rule 45
	for            reduce using rule 45
	union          reduce using rule 45
	struct         reduce using rule 45
	unsigned       reduce using rule 45
	continue       reduce using rule 45
	break          reduce using rule 45
	return         reduce using rule 45
	read           reduce using rule 45
	write          reduce using rule 45
	str            reduce using rule 45
	'-'            reduce using rule 45
	'*'            reduce using rule 45
	'('            reduce using rule 45
	')'            reduce using rule 45
	'{'            reduce using rule 45
	'}'            reduce using rule 45
	';'            reduce using rule 45


State 52

	Instrucciones -> Instruccion .                      (rule 70)

	var            reduce using rule 70
	int            reduce using rule 70
	float          reduce using rule 70
	type           reduce using rule 70
	functionType   reduce using rule 70
	bool           reduce using rule 70
	if             reduce using rule 70
	while          reduce using rule 70
	for            reduce using rule 70
	union          reduce using rule 70
	struct         reduce using rule 70
	unsigned       reduce using rule 70
	continue       reduce using rule 70
	break          reduce using rule 70
	return         reduce using rule 70
	read           reduce using rule 70
	write          reduce using rule 70
	str            reduce using rule 70
	'-'            reduce using rule 70
	'*'            reduce using rule 70
	'('            reduce using rule 70
	'{'            reduce using rule 70
	'}'            reduce using rule 70
	';'            reduce using rule 70


State 53

	Instruccion -> For .                                (rule 46)

	var            reduce using rule 46
	int            reduce using rule 46
	float          reduce using rule 46
	type           reduce using rule 46
	functionType   reduce using rule 46
	bool           reduce using rule 46
	if             reduce using rule 46
	while          reduce using rule 46
	for            reduce using rule 46
	union          reduce using rule 46
	struct         reduce using rule 46
	unsigned       reduce using rule 46
	continue       reduce using rule 46
	break          reduce using rule 46
	return         reduce using rule 46
	read           reduce using rule 46
	write          reduce using rule 46
	str            reduce using rule 46
	'-'            reduce using rule 46
	'*'            reduce using rule 46
	'('            reduce using rule 46
	')'            reduce using rule 46
	'{'            reduce using rule 46
	'}'            reduce using rule 46
	';'            reduce using rule 46


State 54

	Instruccion -> While .                              (rule 47)

	var            reduce using rule 47
	int            reduce using rule 47
	float          reduce using rule 47
	type           reduce using rule 47
	functionType   reduce using rule 47
	bool           reduce using rule 47
	if             reduce using rule 47
	while          reduce using rule 47
	for            reduce using rule 47
	union          reduce using rule 47
	struct         reduce using rule 47
	unsigned       reduce using rule 47
	continue       reduce using rule 47
	break          reduce using rule 47
	return         reduce using rule 47
	read           reduce using rule 47
	write          reduce using rule 47
	str            reduce using rule 47
	'-'            reduce using rule 47
	'*'            reduce using rule 47
	'('            reduce using rule 47
	')'            reduce using rule 47
	'{'            reduce using rule 47
	'}'            reduce using rule 47
	';'            reduce using rule 47


State 55

	Instruccion -> If .                                 (rule 48)

	var            reduce using rule 48
	int            reduce using rule 48
	float          reduce using rule 48
	type           reduce using rule 48
	functionType   reduce using rule 48
	bool           reduce using rule 48
	if             reduce using rule 48
	while          reduce using rule 48
	for            reduce using rule 48
	union          reduce using rule 48
	struct         reduce using rule 48
	unsigned       reduce using rule 48
	continue       reduce using rule 48
	break          reduce using rule 48
	return         reduce using rule 48
	read           reduce using rule 48
	write          reduce using rule 48
	str            reduce using rule 48
	'-'            reduce using rule 48
	'*'            reduce using rule 48
	'('            reduce using rule 48
	')'            reduce using rule 48
	'{'            reduce using rule 48
	'}'            reduce using rule 48
	';'            reduce using rule 48


State 56

	Instruccion -> Asignacion . ';'                     (rule 49)

	';'            shift, and enter state 134


State 57

	Atom -> LLamada .                                   (rule 81)

	'<<'           reduce using rule 81
	'>>'           reduce using rule 81
	'.'            reduce using rule 81
	'=='           reduce using rule 81
	'>='           reduce using rule 81
	'<='           reduce using rule 81
	'!='           reduce using rule 81
	'||'           reduce using rule 81
	'&&'           reduce using rule 81
	'='            reduce using rule 81
	'+'            reduce using rule 81
	'-'            reduce using rule 81
	'*'            reduce using rule 81
	'/'            reduce using rule 81
	')'            reduce using rule 81
	';'            reduce using rule 81
	'%'            reduce using rule 81
	'<'            reduce using rule 81
	'>'            reduce using rule 81
	'&'            reduce using rule 81
	'|'            reduce using rule 81
	']'            reduce using rule 81
	','            reduce using rule 81


State 58

	Block -> Block2 Instrucciones . Block3              (rule 42)
	Instrucciones -> Instrucciones . Instruccion        (rule 69)
	Instrucciones -> Instrucciones . VarDeclaration     (rule 71)

	var            shift, and enter state 63
	int            shift, and enter state 64
	float          shift, and enter state 65
	type           shift, and enter state 12
	functionType   shift, and enter state 13
	bool           shift, and enter state 66
	if             shift, and enter state 67
	while          shift, and enter state 68
	for            shift, and enter state 69
	union          shift, and enter state 24
	struct         shift, and enter state 25
	unsigned       shift, and enter state 16
	continue       shift, and enter state 70
	break          shift, and enter state 71
	return         shift, and enter state 72
	read           shift, and enter state 73
	write          shift, and enter state 74
	str            shift, and enter state 75
	'-'            shift, and enter state 76
	'*'            shift, and enter state 77
	'('            shift, and enter state 78
	'{'            shift, and enter state 34
	'}'            shift, and enter state 133
	';'            shift, and enter state 79

	basicType      goto state 3
	Types          goto state 49
	variables      goto state 5
	VarDeclaration goto state 130
	Block          goto state 51
	Block2         goto state 33
	Block3         goto state 131
	Instruccion    goto state 132
	For            goto state 53
	While          goto state 54
	If             goto state 55
	Asignacion     goto state 56
	LLamada        goto state 57
	AnomFun        goto state 59
	Atom           goto state 60
	Atom2          goto state 61
	Exp            goto state 62

State 59

	Atom -> AnomFun .                                   (rule 86)

	'<<'           reduce using rule 86
	'>>'           reduce using rule 86
	'.'            reduce using rule 86
	'=='           reduce using rule 86
	'>='           reduce using rule 86
	'<='           reduce using rule 86
	'!='           reduce using rule 86
	'||'           reduce using rule 86
	'&&'           reduce using rule 86
	'='            reduce using rule 86
	'+'            reduce using rule 86
	'-'            reduce using rule 86
	'*'            reduce using rule 86
	'/'            reduce using rule 86
	')'            reduce using rule 86
	';'            reduce using rule 86
	'%'            reduce using rule 86
	'<'            reduce using rule 86
	'>'            reduce using rule 86
	'&'            reduce using rule 86
	'|'            reduce using rule 86
	']'            reduce using rule 86
	','            reduce using rule 86


State 60

	Exp -> Atom .                                       (rule 110)

	'<<'           reduce using rule 110
	'>>'           reduce using rule 110
	'.'            reduce using rule 110
	'=='           reduce using rule 110
	'>='           reduce using rule 110
	'<='           reduce using rule 110
	'!='           reduce using rule 110
	'||'           reduce using rule 110
	'&&'           reduce using rule 110
	'='            reduce using rule 110
	'+'            reduce using rule 110
	'-'            reduce using rule 110
	'*'            reduce using rule 110
	'/'            reduce using rule 110
	')'            reduce using rule 110
	';'            reduce using rule 110
	'%'            reduce using rule 110
	'<'            reduce using rule 110
	'>'            reduce using rule 110
	'&'            reduce using rule 110
	'|'            reduce using rule 110
	']'            reduce using rule 110
	','            reduce using rule 110


State 61

	Asignacion -> Atom2 . '=' Exp                       (rule 64)
	Exp -> Atom2 .                                      (rule 109)

	'<<'           reduce using rule 109
	'>>'           reduce using rule 109
	'.'            reduce using rule 109
	'=='           reduce using rule 109
	'>='           reduce using rule 109
	'<='           reduce using rule 109
	'!='           reduce using rule 109
	'||'           reduce using rule 109
	'&&'           reduce using rule 109
	'='            shift, and enter state 129
	'+'            reduce using rule 109
	'-'            reduce using rule 109
	'*'            reduce using rule 109
	'/'            reduce using rule 109
	';'            reduce using rule 109
	'%'            reduce using rule 109
	'<'            reduce using rule 109
	'>'            reduce using rule 109
	'&'            reduce using rule 109
	'|'            reduce using rule 109


State 62
